Fix card spacing

--- a/css-cards/css/main.css
+++ b/css-cards/css/main.css
@@ -3,8 +3,8 @@
 .card-container {
   /* Holds all the cards */
   display: flex;
-  align-items: baseline;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: space-evenly;
   width: 80%;
   text-align: center;
 }
@@ -12,6 +12,7 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  /* You could change the card dimensions using a Sass mixin */
   height: 320px;
   width: 240px;
 }
